# FJFCODE

./: README.md
LVGL/STM32F407+LCD/: project.uvguix.Administrator  project.uvoptx  project.uvprojx
LVGL/STM32F407+LCD/Listings/: project.map  startup_stm32f40_41xxx.lst
LVGL/STM32F407+LCD/MYCODE/: adc.c  adc.h  delay.c  dht11.c  dht11.h  exti.c  exti.h  i2c_ee.c  iic.c  includes.h  iwdg.c  iwdg.h  key.c  key.h  led.c  led.h  main.c  pwm.c  pwm.h  rtc.c  rtc.h  spiflash.c  spiflash.h  tim.c  tim.h  usart.h
LVGL/STM32F407+LCD/Objects/: adc.crf  adc.d  delay.crf  delay.d  dht11.crf  dht11.d  exti.crf  exti.d  i2c_ee.crf  i2c_ee.d  iic.crf  iic.d  iwdg.crf  iwdg.d  key.crf  key.d  led.crf  led.d  main.crf  main.d  misc.crf  misc.d  project.axf  project.build_log.htm  project.htm  project.lnp  project_LED.dep  pwm.crf  pwm.d  rtc.crf  rtc.d  spiflash.crf  spiflash.d  stm32f4xx_adc.crf  (+35 more)
阶段项目一行车记录仪/: device.c  device.h  project.sh  q1  q2  q3  q4  q5  q6  主页面2.c  开机动画1.c  录像集6.c  查看历史记录4.c  相册5.c  行车记录主页面+倒车+拍照+录像+循环录像3.c  音乐播放7.c
阶段项目三智能视频小车/项目工程/: JLinkLog.txt  Project.uvguix.fjf
阶段项目二汽车智能车机/lv_port_linux_frame_buffer-master/: Makefile  lv_conf.h  lv_drv_conf.h  main.c  my_font.c  project.sh
阶段项目二汽车智能车机/lv_port_linux_frame_buffer-master/output/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
阶段项目二汽车智能车机/lv_port_linux_frame_buffer-master/output/components/: ui_comp.h  ui_comp_button1.c  ui_comp_button1.h  ui_comp_hook.c  ui_comp_hook.h
阶段项目二汽车智能车机/lv_port_linux_frame_buffer-master/output/fonts/: ui_font_Font1.c  ui_font_Font1mid.c  ui_font_Font1small.c  ui_font_Font20.c  ui_font_Fontb30.c  ui_font_Fontbig.c
阶段项目二汽车智能车机/lv_port_linux_frame_buffer-master/output/images/: ui_img_0_png.c  ui_img_1061026683.c  ui_img_10_png.c  ui_img_11_png.c  ui_img_1208922968.c  ui_img_1256607386.c  ui_img_1286555028.c  ui_img_12_png.c  ui_img_13_png.c  ui_img_1454264222.c  ui_img_14_png.c  ui_img_15_png.c  ui_img_1603563022.c  ui_img_1609717271.c  ui_img_1615747111.c  ui_img_1630288244.c  ui_img_1643313576.c  ui_img_1656314145.c  ui_img_1688886355.c  ui_img_16_png.c  ui_img_1759290867.c  ui_img_17_png.c  ui_img_181976582.c  ui_img_1823490834.c  ui_img_1858872258.c  ui_img_18_png.c  ui_img_1949692305.c  ui_img_1952436088.c  ui_img_1971172720.c  ui_img_1990881022.c  ui_img_19_png.c  ui_img_1_png.c  ui_img_2078435346.c  ui_img_2096567455.c  ui_img_20_png.c  ui_img_21_png.c  ui_img_22_png.c  ui_img_23_png.c  ui_img_24_png.c  ui_img_25_png.c  (+31 more)
阶段项目二汽车智能车机/lv_port_linux_frame_buffer-master/output/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c
(+38 files in other folders)
