SET(SOURCES components/ui_comp_button1.c
    components/ui_comp.c
    screens/ui_Screen1.c
    screens/ui_Screen2.c
    screens/ui_Screen3.c
    screens/ui_Screen4.c
    screens/ui_Screen5.c
    screens/ui_Screen6.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_703041396.c
    images/ui_img_491042716.c
    images/ui_img_1208922968.c
    images/ui_img_540878956.c
    images/ui_img_1454264222.c
    images/ui_img_3_png.c
    images/ui_img_0_png.c
    images/ui_img_62174538.c
    images/ui_img_1630288244.c
    images/ui_img_1874886367.c
    images/ui_img_2096567455.c
    images/ui_img_1232115273.c
    images/ui_img_604655580.c
    images/ui_img_1615747111.c
    images/ui_img_50470853.c
    images/ui_img_1858872258.c
    images/ui_img_756801193.c
    images/ui_img_1971172720.c
    images/ui_img_1656314145.c
    images/ui_img_1643313576.c
    images/ui_img_342436176.c
    images/ui_img_1286555028.c
    images/ui_img_1761638915.c
    images/ui_img_84290273.c
    images/ui_img_2096174455.c
    images/ui_img_1749208717.c
    images/ui_img_465780092.c
    images/ui_img_2078435346.c
    images/ui_img_1389980420.c
    images/ui_img_1332689492.c
    images/ui_img_1_png.c
    images/ui_img_10_png.c
    images/ui_img_11_png.c
    images/ui_img_12_png.c
    images/ui_img_13_png.c
    images/ui_img_14_png.c
    images/ui_img_15_png.c
    images/ui_img_16_png.c
    images/ui_img_17_png.c
    images/ui_img_18_png.c
    images/ui_img_19_png.c
    images/ui_img_2_png.c
    images/ui_img_20_png.c
    images/ui_img_21_png.c
    images/ui_img_22_png.c
    images/ui_img_23_png.c
    images/ui_img_24_png.c
    images/ui_img_25_png.c
    images/ui_img_26_png.c
    images/ui_img_27_png.c
    images/ui_img_28_png.c
    images/ui_img_29_png.c
    images/ui_img_30_png.c
    images/ui_img_31_png.c
    images/ui_img_32_png.c
    images/ui_img_33_png.c
    images/ui_img_34_png.c
    images/ui_img_35_png.c
    images/ui_img_36_png.c
    images/ui_img_37_png.c
    images/ui_img_38_png.c
    images/ui_img_4_png.c
    images/ui_img_5_png.c
    images/ui_img_6_png.c
    images/ui_img_7_png.c
    images/ui_img_8_png.c
    images/ui_img_9_png.c
    images/ui_img_537786332.c
    images/ui_img_1759290867.c
    images/ui_img_886354412.c
    images/ui_img_1603563022.c
    ui_temporary_image.c
    fonts/ui_font_Font1.c
    fonts/ui_font_Font1mid.c
    fonts/ui_font_Font20.c
    fonts/ui_font_Fontb30.c)

add_library(ui ${SOURCES})
